# master_thesis

api-remoting-by-FanGu-edited/: CMakeLists.txt  Makefile  firecracker  firecracker_requirements.md  gpu_instance.h  readme.md  todo_list.c  vector_add.ptx
api-remoting-by-FanGu-edited/interception/: CMakeLists.txt  compiler.h  cuda_client.h  cuda_server.cpp  gpu_instance.cpp  gpu_instance.h  interception.cpp  interception.h  interception_runtime.c  shared_memory_manager.h  stream.h  type_decl.h
api-remoting-by-FanGu-edited/tests/: CMakeLists.txt  basic_vector_add_driver.cu  host_sample.cpp  kernel_sample.cu
api-remoting-by-FanGu-edited/tests/test_check_cudaMalloc/: CMakeLists.txt  check_cudaMalloc.cu
api-remoting-by-FanGu-edited/tests/test_firecracker/: CMakeLists.txt  firecracker_test.cpp  test.cpp
api-remoting-by-FanGu-edited/tests/test_host_cuda_register/: CMakeLists.txt  test_host_cuda_register.cpp
api-remoting-by-FanGu-edited/tests/test_pinned_memory_driver/: CMakeLists.txt  test_pinned_memory_driver.cpp
api-remoting-by-FanGu-edited/tests/test_vector_add_runtime/: CMakeLists.txt  test_vector_add_runtime.cu
api-remoting-by-FanGu-edited/util/: code_generate.py  convert_runtime_macro.py  cuda_prototype.txt  filter_runtime.py  filtered_declarations_runtime.txt  filtered_prototypes.txt  generated_dispatch.cpp  generated_hooks.cpp  intercepts_runtime_output.txt  output_prototype.py  retrieve_from_cuda.py  util.txt
firecracker_GPU_passthrough/: README.md
firecracker_GPU_passthrough/resources/: rebuild.sh
firecracker_GPU_passthrough/resources/guest_configs/: pcie.config
firecracker_GPU_passthrough/resources/seccomp/: x86_64-unknown-linux-musl.json
firecracker_GPU_passthrough/src/acpi-tables/src/: lib.rs  mcfg.rs
firecracker_GPU_passthrough/src/pci/: Cargo.toml
firecracker_GPU_passthrough/src/pci/src/: device.rs  vfio.rs
firecracker_GPU_passthrough/src/vm-device/: Cargo.toml
firecracker_GPU_passthrough/src/vm-device/src/interrupt/: mod.rs
firecracker_GPU_passthrough/src/vm-system-allocator/src/: address.rs  system.rs
firecracker_GPU_passthrough/src/vmm/: Cargo.toml
firecracker_GPU_passthrough/src/vmm/src/: builder.rs  interrupt.rs  lib.rs  resources.rs
firecracker_GPU_passthrough/src/vmm/src/acpi/: mod.rs  x86_64.rs
firecracker_GPU_passthrough/src/vmm/src/arch/: mod.rs
firecracker_GPU_passthrough/src/vmm/src/arch/aarch64/: vm.rs
firecracker_GPU_passthrough/src/vmm/src/arch/x86_64/: layout.rs  mod.rs  msr.rs  vcpu.rs  vm.rs
firecracker_GPU_passthrough/src/vmm/src/device_manager/: legacy.rs  mmio.rs  persist.rs
firecracker_GPU_passthrough/src/vmm/src/devices/: bus.rs  mod.rs  pci_segment.rs
firecracker_GPU_passthrough/src/vmm/src/devices/legacy/: rtc_pl031.rs
firecracker_GPU_passthrough/src/vmm/src/devices/virtio/: device.rs  persist.rs  queue.rs  vhost_user.rs
firecracker_GPU_passthrough/src/vmm/src/devices/virtio/balloon/: device.rs  persist.rs
firecracker_GPU_passthrough/src/vmm/src/devices/virtio/block/: device.rs
firecracker_GPU_passthrough/src/vmm/src/devices/virtio/block/vhost_user/: device.rs
firecracker_GPU_passthrough/src/vmm/src/devices/virtio/block/virtio/: device.rs  persist.rs
firecracker_GPU_passthrough/src/vmm/src/devices/virtio/net/: device.rs  persist.rs
firecracker_GPU_passthrough/src/vmm/src/devices/virtio/rng/: device.rs  persist.rs
firecracker_GPU_passthrough/src/vmm/src/devices/virtio/transport/: mmio.rs  mod.rs  pci_common_config.rs  pci_device.rs
firecracker_GPU_passthrough/src/vmm/src/devices/virtio/vsock/: device.rs  event_handler.rs  persist.rs
firecracker_GPU_passthrough/src/vmm/src/vmm_config/: boot_source.rs  pci.rs
firecracker_GPU_passthrough/src/vmm/src/vstate/: vcpu.rs
firecracker_GPU_passthrough/tools/: devtool
orchestrator-api-remoting/: .gitignore  Makefile  compile_flags.txt  cuda_server  debugnvml  debugnvml.cpp  orchestrator.cpp
